--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </nav> -->
 
 
-<nav class="navbar navbar-default navbar-fixed-top">
+<nav class="navbar navbar-default navbar-fixed-top active">
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" style="color: #002b80" href="#">VideoLAN organization</a>
@@ -34,7 +34,7 @@
     <ul class="nav navbar-nav">
       <!-- <li class="active"><a href="#">Home</a></li> -->
 
-		  <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">VideoLAN <span class="caret"></span></a>
+		  <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" style="color: black" href="#">VideoLAN <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a href="#">Team and organization</a></li>
           <li><a href="#">Consulting services and partners</a></li>
@@ -50,7 +50,7 @@
 					  <li><a href="#">Download</a></li>
 						<li><a href="#">Features</a></li>
 						<li><a href="#">Customize</a></li>
-						<li><a href="#">Get goodies</a><li>
+						<li><a href="#">Get goodies</a></li>
 					</ul>
 				</li>
 
@@ -59,7 +59,7 @@
 						  <li><a href="#">DVBlast</a></li>
 							<li><a href="#">x264</a></li>
 							<li><a href="#">x262</a></li>
-							<li><a href="#">x265</a><li>
+							<li><a href="#">x265</a></li>
 						</ul>
 				</li>
 
@@ -75,9 +75,50 @@
   </div>
 </nav>
 
-		<div class="container">
-  <h1>------Content------</h1>
-		<!-- <p>First trial</p> -->
+	<div class="container" style="margin:50px">
+  <h1>Content</h1>
 	</div>
+
+	<div class="container-fluid">
+	  <!-- <h1>Content</h1> -->
+	  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+	    <!-- Indicators -->
+	    <ol class="carousel-indicators">
+	      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+	      <li data-target="#myCarousel" data-slide-to="1"></li>
+	      <li data-target="#myCarousel" data-slide-to="2"></li>
+	    </ol>
+
+			<!-- Wrapper for slides -->
+    <div class="carousel-inner">
+      <div class="item active">
+        <img src="images/ss1.jpg" alt="picture" style="width:70%;">
+      </div>
+
+			<div class="item">
+        <img src="images/ss2.jpg" alt="s2" style="width:70%;">
+      </div>
+
+      <div class="item">
+        <img src="images/ss3.jpg" alt="s3" style="width:70%;">
+      </div>
+    </div>
+
+		<!-- Left and right controls -->
+	 <a class="left carousel-control" href="#myCarousel" style="background: #ff8c1a" data-slide="prev">
+		 <span class="glyphicon glyphicon-chevron-left"></span>
+		 <span class="sr-only">Previous</span>
+	 </a>
+	 <a class="right carousel-control" href="#myCarousel" style="background: #ff8c1a" data-slide="next">
+		 <span class="glyphicon glyphicon-chevron-right"></span>
+		 <span class="sr-only">Next</span>
+	 </a>
+ </div>
+</div>
+
+
+
+		<!-- <p>First trial</p> -->
+
 	</body>
 </html>
